Bug 489117 - Panel pushes windows up that are supposed to have a forced position set in the window rules on initial start of plasmashell
Summary: Panel pushes windows up that are supposed to have a forced position set in th...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-24 16:51 UTC by Holmes
Modified: 2024-07-03 18:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Holmes 2024-06-24 16:51:14 UTC
SUMMARY

When a window that is configured to autostart and its position has been forced to a fixed position via the window rules settings to overlap with the task panel, either in front or behind, on plasmashell restart, the window gets pushed up by the taskbar and is no longer at its fixed position that is supposed to be forced.


STEPS TO REPRODUCE
1. Have a window on autostart so it always starts when the system starts
2. Place the window over the task panel and enforce its position in the window rules settings. (Position, Force, X, Y)
3. Restart plasmashell or reboot

OBSERVED RESULT
The task panel pushed the window up and the window is no longer at its enforced position.

EXPECTED RESULT
Since the position is set on "Force" the window position should never change, even on restart. The window should be on the same spot that was set in the window rules setting and not get pushed up by the task panel.


Operating System: Arch Linux 
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-06-27 10:45:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6004
Comment 2 Zamundaaa 2024-06-27 12:15:37 UTC
Git commit 8314cdf89d98e045df2e70ebfd1a8de3182f13cb by Xaver Hugl.
Committed on 27/06/2024 at 11:56.
Pushed by zamundaaa into branch 'master'.

window: adhere to window rules in checkWorkspacePosition

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/8314cdf89d98e045df2e70ebfd1a8de3182f13cb
Comment 3 Zamundaaa 2024-06-27 13:52:18 UTC
Git commit deeeddb652d20086625a221788dff1926b26172f by Xaver Hugl.
Committed on 27/06/2024 at 13:42.
Pushed by zamundaaa into branch 'Plasma/6.1'.

window: adhere to window rules in checkWorkspacePosition


(cherry picked from commit 8314cdf89d98e045df2e70ebfd1a8de3182f13cb)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/deeeddb652d20086625a221788dff1926b26172f
Comment 4 Holmes 2024-07-03 18:28:02 UTC
Thank you for fixing this!