window: adhere to window rules in checkWorkspacePosition

BUG: 489117


(cherry picked from commit 8314cdf89d98e045df2e70ebfd1a8de3182f13cb)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>